# fast_shepherd_score

./: .gitignore  MERGE_NOTES.md  MERGE_READINESS_AUDIT.md  POTENTIAL_FUTURE_WORK.md  README.md  RELATED_WORK.md  SPEED_EXPERIMENTS.md  SPEED_EXPERIMENTS_CPU.md  WHATS_NEW.md  codex_startup.sh  environment-cpu-svml.yml  environment.yml  pyproject.toml  pytest.ini
.claude/skills/accelerate-scoring-mode/: SKILL.md  kernel_anatomy.md  parity_gates.md  seams.md
.claude/skills/design-scoring-mode/: SKILL.md  pitfalls.md  seams.md  template_test.py
.github/workflows/: ci.yml
benchmarks/: README.md  README_cpu.md  __init__.py  accuracy_diag.py  accuracy_fix_probe.py  analyze_defaults.py  bench_isolated.py  benchmark.py  benchmark_cpu.py  benchmark_vol_color.py  bucket_parity.py  check_real.py  diag_cross.py  diag_scaling.py  diag_steps.py  diag_thermal.py  esp_combo_seed_probe.py  fork_selfcopy.py  graph_parity_gate.py  graph_speed.py  graphs_ab.py  headline.py  kernelbench.py  microbench_cudagraph.py  microbench_finestep.py  mixed_quality.py  multigpu_test.py  optimize_defaults.py  parity_check.py  parity_scores.py  pharm_compile_try.py  pharm_kernel_parity.py  pharm_kernel_speed.py  plot_all_hardware.py  profile_fast_paths.py  profile_overhead.py  profile_overlap.py  profile_overlap_esp.py  profile_seedgen.py  real_parity.py  (+14 more)
benchmarks/alignment_bench/: __init__.py  backends.py  jax_shmap.py  metrics.py  runner.py  timing.py  workloads.py
benchmarks/experiments/: __init__.py  cpu_allmodes_test.py  cpu_byte_identical_probe.py  cpu_cutoff_kernel_probe.py  cpu_language_investigation.py  cpu_numba_kernel_probe.py  cpu_numba_scaling_probe.py  cpu_singlecore_probe.py  cpu_vol_integration_test.py  cpu_vol_nr_accuracy.py  cuda_init_probe.py  fork_bisect.py  fork_test.py  fork_test2.py  import_bisect.py  kernelbench.py  mgpu_ceiling.py  mgpu_driver_test.py  mgpu_parity.py  mgpu_pool_probe.py  parity_scores.py  speedlab.py  startup_probe.py
benchmarks/results/: plot_data.json  speed_table.md
benchmarks/results/1gpu_l40s/: plot_data.json  speed_table.md
benchmarks/results/1gpu_l40s_fss/: plot_data.json  speed_table.md
benchmarks/results/1gpu_l40s_fss_smoke/: plot_data.json  speed_table.md
benchmarks/results/4gpu_l40s/: plot_data.json  speed_table.md
benchmarks/results/4gpu_l40s_smoke/: plot_data.json  speed_table.md
benchmarks/results/blackwell_rtx6000/: plot_data.json  speed_table.md
benchmarks/results/blackwell_rtx6000_smoke/: plot_data.json  speed_table.md
benchmarks/results/h100/: plot_data.json  speed_table.md
benchmarks/results/h100_smoke/: plot_data.json  speed_table.md
benchmarks/results/h200/: plot_data.json  speed_table.md
benchmarks/results/h200_smoke/: plot_data.json  speed_table.md
benchmarks/results/l40s-1gpu/: plot_data.json  speed_table.md
benchmarks/results/l40s-4gpu/: plot_data.json  speed_table.md
benchmarks/results/l40s_1gpu/: plot_data.json  speed_table.md
benchmarks/results/l40s_1gpu_smoke/: plot_data.json  speed_table.md
benchmarks/results/l40s_4gpu/: plot_data.json  speed_table.md
benchmarks/results/l40s_4gpu_smoke/: plot_data.json  speed_table.md
benchmarks/results/rtx4050/: plot_data.json  speed_table.md
benchmarks/results_cpu/: plot_data_cpu.json  speed_table_cpu.md
benchmarks/results_cpu/eng_pool/: plot_data_cpu.json  speed_table_cpu.md
benchmarks/results_cpu/eng_threads/: plot_data_cpu.json  (+1 more)
docs/: ADDING_A_FAST_MODE.md  MOLECULE_CONSTRUCTION_PROBLEM.md  STREAMING_DESIGN.md  usage.rst
examples/: 02_scoring.ipynb
paper/: CAPTIONS.md  README.md  RELATED_WORK.md  common.py
paper/_engaging/: README.md  _env.sh  build_roshambo2.sbatch  fig2_measure.sbatch  fig5_roshambo.sbatch  fig6_enrichment.sbatch  figs134_refresh.sbatch  probe.sh
paper/fig1_backend_parity/: README.md  parity.json  plot.py  run.py
paper/fig2_throughput_scaling/: README.md  measure.py  plot.py
paper/fig3_speed_vs_baselines/: README.md  plot.py  results.json  run.py
paper/fig4_esp_value/: README.md  analog_esp.json  plot.py  run.py
paper/fig5_roshambo_headtohead/: README.md  plot.py  results.json  run.py  setup.sh
paper/fig6_enrichment/: README.md  enrichment_aces.json  enrichment_ada.json  enrichment_adrb2.json  enrichment_ampc.json  enrichment_andr.json  enrichment_fa10.json  enrichment_fabp4.json  enrichment_hmdh.json  plot.py  run.py
shepherd_score/: alignment.py  container.py  generate_point_cloud.py  objective.py  screen.py  surface_diagnostics.py
shepherd_score/accel/: __init__.py  _modes.py  agent_prompt.md  batch.py  cpu_pool.py  multi_gpu.py  screen_parallel.py
shepherd_score/alignment/: __init__.py  _torch.py
shepherd_score/alignment_utils/: fast_common.py  fast_esp_combo_se3.py  fast_esp_se3.py  fast_pharm_se3.py  fast_se3.py  fast_surface_se3.py  se3.py
shepherd_score/container/: __init__.py  _batch.py  _batch_align.py  _core.py  _cpu_pool.py  multi_gpu.py
shepherd_score/pharm_utils/: pharmacophore.py
shepherd_score/protonation/: protonate.py
shepherd_score/score/: __init__.py  atomtype_scoring.py  gaussian_overlap_esp_triton.py  gaussian_overlap_triton.py  pharmacophore_grad_triton.py  pharmacophore_overlap_triton.py  pharmacophore_scoring.py  pharmacophore_scoring_np.py
tests/: test_alignment_backends.py  test_alignment_utils.py  test_cpu_pool.py  test_esp_field.py  test_fast_batch_alignment.py  test_mode_registry.py  test_new_modes_accel.py  test_numba_backend.py  test_screen.py  test_si_modes.py  test_smooth_surface.py  test_vol_color.py  test_vol_esp_tversky.py  test_vol_lipo.py  test_vol_tversky.py
(+58 files in other folders)
