[build-system]
requires = ["setuptools>=80", "wheel", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "shepherd-score"
dynamic = ["version"]
description = "3D scoring functions used for evaluation of ShEPhERD"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Kento Abeywardane", email = "kento@mit.edu"}
]
keywords = [
    "bioinformatics",
    "molecular-modeling",
    "3d-scoring",
    "drug-discovery",
    "chemistry",
    "bioisosteres"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "rdkit>=2023.03,<2025.09.3; python_version == '3.9'",
    "rdkit>=2023.03; python_version >= '3.10'",
    "torch>=1.12",
    "open3d>=0.18",
    "py3Dmol",
    "numpy",
    "pandas>=2.0",
    "scipy>=1.10",
    "molscrub",
    "tqdm",
    # numba is a CORE dependency: it is the default CPU backend for the batched aligners
    # (``backend=None`` resolves to ``numba`` on a CPU host). Unpinned here -- pip cannot
    # deliver the SVML-patched build; for the ~2-4x SVML CPU kernels use the conda
    # ``environment.yml`` (numba 0.59.1 + icc_rt). Without SVML the kernels are correct but
    # slower and emit a one-time RuntimeWarning.
    "numba",
]

[project.urls]
Homepage = "https://github.com/kentoabeywardane/shepherd-score"
Repository = "https://github.com/kentoabeywardane/shepherd-score"
Documentation = "https://shepherd-score.readthedocs.io"
"Bug Tracker" = "https://github.com/kentoabeywardane/shepherd-score/issues"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "ruff",
    "mypy",
]
docs = [
    "sphinx>=7.0",
    "sphinx-book-theme>=1.0",
    "sphinx-copybutton>=0.5",
    "myst-nb>=1.0",
]
# Retained for backwards compatibility only: numba is now a CORE dependency, so this
# extra is redundant (installing ``.[cpu]`` is equivalent to the base install).
cpu = [
    "numba",
]
# GPU (Triton) kernels. TWO install traps:
#   1. Needs a CUDA build of torch. The default CPU torch wheel has no GPU and bundles no
#      Triton, so `pip install torch` alone is not enough -- install a +cuXXX torch build.
#   2. Needs Triton >= 3.6. The overlap kernels use `@triton.autotune(cache_results=...)`,
#      an API that only exists in Triton 3.6+. On older Triton every GPU kernel dies at
#      compile with a missing-attribute error and there is no CPU fallback.
gpu = [
    "triton>=3.6",
]
jax = [
    "jax>=0.4.20; python_version <'3.11'",
    "jaxlib>=0.4.20; python_version <'3.11'",
    "optax>=0.2.0; python_version <'3.11'",
    "jax>=0.9.0; python_version >='3.11'",
    "jaxlib>=0.9.0; python_version >='3.11'",
    "optax>=0.2.6; python_version >='3.11'",
    "scikit-learn>=1.3",
]
docking = [
    "meeko",
    "vina>=1.2.5",
    "openbabel",
    "prolif>=2.0.3",
    "biopython>=1.84,<1.86; python_version == '3.9'",
    "biopython>=1.84; python_version >= '3.10'",
]
all = [
    "shepherd-score[dev,docs,cpu,gpu,jax,docking]",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["shepherd_score*"]
exclude = ["tests*", "examples*", "scripts*", "docs*", ".github*"]

[tool.setuptools.package-data]
"shepherd_score" = ["*.yml", "*.yaml", "*.json", "*.txt", "*.fdef", "*.pdbqt"]

[tool.ruff]
line-length = 88
target-version = "py39"
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".tox",
    ".venv",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
]
ignore = [
    "E501",   # line too long
    "B008",   # function call in default argument
    "SIM108", # ternary operator
    "F401",   # unused imports
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__
# The accelerated kernels and their drivers use numerical-code idioms that pycodestyle flags
# but that read better here than the alternatives: semicolon-grouped assignments so one
# matrix/vector row occupies one line (E702), single-capital names for standard math objects
# such as O for an overlap matrix and I for the identity (E741), and short lambdas used as
# local buffer factories (E731). The rest of the package keeps the project's full strictness.
"shepherd_score/accel/**" = ["E702", "E741", "E731"]
# Kernel/backend tests build small numeric fixtures with the same dense idioms.
"tests/test_numba_backend.py" = ["E402", "E702", "E741"]  # imports follow pytest.importorskip
"tests/test_cpu_pool.py" = ["E702"]
"tests/test_screen.py" = ["E702"]
"tests/test_fast_batch_alignment.py" = ["E731"]

[tool.ruff.lint.isort]
known-first-party = ["shepherd_score"]

[tool.setuptools_scm]
version_file = "shepherd_score/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=shepherd_score",
    "--cov-report=term-missing",
] 